# extract-blobs

./: .gitignore  Cargo.toml  README.md
docs/: old_imagemagick_method.md
src/: alpha_channel.rs  arg_validators.rs  color_ops.rs  detection.rs  drawing.rs  error.rs  extractor.rs  io.rs  lib.rs  main.rs
src/extractor/: alpha_channel.rs  detection.rs  dpi.rs  drawing.rs  extraction.rs  io.rs  ocr.rs
src/extractor/dpi/: decoder.rs
src/extractor/drawing/: color_ops.rs
