[package]
name = "split-img"
version = "0.1.0"
edition = "2024"
authors = ["Robin Smidsrød"]
description = "Split a green-screen scanned image into multiple images"
keywords = ["graphics", "scanner", "image-manipulation", "image-processing"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color = "0.3.1"
glob = "0.3.2"
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.14.0"
palette = "0.7.6"
png = "0.17.16"
zune-jpeg = "0.4.17"
