[package]
name = "extract-blobs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Robin Smidsrød <robin@smidsrod.no>"]
description = "Extract blobs from a green-screen scanned images and store into multiple images"
keywords = ["graphics", "scanner", "image-manipulation", "image-processing"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"
repository = "https://github.com/robinsmidsrod/extract-blobs"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
color = "0.3.1"
derive_more = { version = "2.0.1", features = ["from"] }
glob = "0.3.2"
image = "0.25.6"
imageproc = "0.25.0"
itertools = "0.14.0"
jfifdump = "0.6.0"
kamadak-exif = "0.6.1"
leptess = "0.14.0"
little_exif = "0.6.12"
palette = "0.7.6"
png = "0.17.16"
wild = "2.2.1"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.06.13"
dependencies = ["tesseract"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static" }
